[package]
name = "symphonia-decoder-libopus"
version = "0.1.0"
edition = "2021"
authors = ["Karl Rikte"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
symphonia = { version = "0.5"}
opus = "*"

[dev_dependencies]
symphonia = { version = "0.5"}
